[package]
name = "flashblocks-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.7", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
plotters = "0.3"
plotters-backend = "0.3"
eframe = "0.29"
egui_plot = "0.29"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
